Address PR review comments
- FlightTransport: rename rootAllocator -> flightAllocator (it's a child of
  ArrowAllocatorProvider's root, not a root itself); cap flight child at
  Integer.MAX_VALUE instead of Long.MAX_VALUE to keep a conservative upper
  bound on off-heap memory.
- ArrowBatchResponse: rename field batch -> batchRoot; fold the C-data-import
  cross-allocator bug note back into the allocator rules (producer allocator
  must be long-lived; same-allocator transfer avoids an Arrow bug with
  foreign-backed buffers).
- FlightOutboundHandler: restore the bug-encountered comment in
  processBatchTask explaining why the stream root must be created from the
  producer's allocator; guard against empty field vectors before indexing,
  matching the existing guard in VectorStreamInput.forNativeArrow.

Signed-off-by: bowenlan-amzn <bowenlan23@gmail.com>